swim_client/src/configuration/tests/resources/valid/client-config-retry-immediate.recon
@config {
    @downlink_connections {
        dl_req_buffer_size: 8,
        buffer_size: 100,
        retry_strategy: @immediate {
            retries: 10
        },
        yield_after: 256
    }
}