swim_client/src/configuration/tests/resources/invalid/invalid-value.recon
@config {
    @downlink_connections {
        buffer_size: "test"
    }
}